2005-06-08  Pawel Salek

	* libbalsa/mailbox_imap.c: survive better cases
	when number of messages changed in the broken connection. Resync
	header caches more aggresively.
	* libbalsa/imap/imap-commands.c: use UID search support.
	* libbalsa/imap/imap-handle.h: allow searching ranges of messages.
	* libbalsa/imap/imap-handle.c: never insert cmd==0 to response queue.
	* libbalsa/imap/imap-search.c: implement it.
	* src/ab-window.c: Fix "No-address-book" case (bug 158939).
	* src/main-window.[hc]: ditto.
	* src/pref-manager.c: ditto.

2005-06-08 Andrew Lau

	* libbalsa/address-book-ldap.c: include "i18n.h".

2005-06-08 14:13  PeterB

	* src/balsa-message.c, src/print.c, src/sendmsg-window.c,
	libbalsa/libbalsa.c, libbalsa/libbalsa.h, libbalsa/mailbox.c,
	libbalsa/message.h: rename libbalsa_date_to_gchar as
	libbalsa_date_to_utf8, and return a UTF-8 string.
	* src/ab-main.c: reuse edit widget for smoother update; reload
	address book after changing it.
	* src/address-book-config.c: use new LibBalsaAddressBook subclass
	structure.
	* libbalsa/Makefile.am: add dependencies.
	* libbalsa/: address.c, address.h: use an editable GtkTreeView to
	edit email addresses; implement libbalsa_address_set_edit_entries
	to reuse an edit widget.
	* libbalsa/: address-book-ldif.c, address-book-ldif.h,
	address-book-text.c, address-book-text.h, address-book-vcard.c,
	address-book-vcard.h, address-book.c, address-book.h: new class
	LibBalsaAddressBookText, subclass of LibBalsaAddressBook, with
	LibBalsaAddressBook{Ldif,Vcard} as subclasses.

2005-06-07 11:56  PeterB

	* libbalsa/: rfc3156.c, gmime-part-rfc2440.c: lock GMimeStreams.

2005-06-06  Pawel Salek

	* libbalsa/gmime-gpgme-signature.c: check gpgme_get_key() result.
	* libbalsa/libbalsa.c: fix bug 306666.
	* libbalsa/send.c: allow the user to check certificates w/o threads.
	* src/main-window.c: mbnode->name can be NULL - do not use it
	and perhaps fix 306636.
	* NEWS: update for real 2.3.3 release this time.
